--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,5 +19,5 @@ steps:
     npm install request --save
     npm install yargs --save
     npm install
-    npm run build
-  displayName: 'npm install and build'
+    npm run test
+  displayName: 'npm install and test'
