--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,8 @@ steps:
     npm install
     npm run test
   displayName: 'npm install and test'
+
+- task: Npm@1
+  inputs:
+    command: 'install'
+
